src/components/Home/Home.css
.page1 {
  display: flex;
  height: 100vh;
  width: 100%;
  justify-content: space-around;
  align-items: center;
}



.page1cont {
  margin: auto;
  animation: float-up 1.8s;
}

.page1cont h1 {
  font-size: 100px;
  font-weight: bolder;
  color: #353535;
}

h1 {
  margin: 0px;
  animation: float-in 2s;

}

.page1cont h4 {
  font-size: 33px;
  font-weight: bolder;
  margin-left: 50px;
  margin-top: 10px;
  color: #9b9b9b;
  margin: 0px;
}

.guitar {
  height: 20%;
  width: 80%;
  opacity: 0.5;
  position: absolute;
  bottom: 0px;
}

@keyframes float-up {
  100% {
    transform: translateY(0px);
    opacity: 1;    
  }
  0% {
    transform: translateY(90px);
    opacity: 0;
  }
}

/* for phone only */
@media (max-width: 599px) {
  .page1cont > h1 {
    font-size: 3em;
  }

  .page1cont > h4 {
    font-size: 1.6em;
    margin-left: 10px;
  }

  .guitar {
    height: 10%;
    max-width: 400px;
  }
}

/* for tablet portrait up  */
@media (min-width: 600px) {
  .page1cont > h1 {
    font-size: 5em;
  }

  .page1cont > h4 {
    font-size: 2.1em;
    margin-left: 30px;
  }

  .guitar {
    height: 15%;
    max-width: 600px;
  }
}

/* for tablet landscape up  */
@media (min-width: 900px) {
  .page1cont > h1 {
    font-size: 7em;
  }

  .page1cont > h4 {
    font-size: 2.6em;
    margin-left: 40px;
  }

  .guitar {
    height: 20%;
    max-width: 800px;
  }
}

/* for desktop up  */
@media (min-width: 1200px) {
  .page1cont > h1 {
    font-size: 120px;
  }

  .page1cont > h4 {
    font-size: 2.9em;
    margin-left: 50px;
  }

  .guitar {
    height: 20%;
    max-width: 1200px;
  }
}

